# formcalc

./: Cargo.toml  LICENSE  PARALLEL_EXECUTION.md  QUICKSTART.md  README.md  WASM_BUILD.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: basic_usage.rs  parallel_benchmark.rs
src/: engine.rs  lib.rs  wasm.rs
src/cache/: mod.rs
src/error/: mod.rs
src/formula/: mod.rs
src/function/: mod.rs
src/graph/: mod.rs
src/parser/: ast.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs
src/value/: mod.rs
