[package]
name = "formcalc"
version = "0.1.0"
edition = "2021"
authors = ["Victor Greggio <victor_greggio@hotmail.com>"]
description = "A powerful formula evaluation engine with dependency management and parallel execution"
license = "MIT"
repository = "https://github.com/victorgreggio/formcalc"
documentation = "https://docs.rs/formcalc"
homepage = "https://github.com/victorgreggio/formcalc"
readme = "README.md"
keywords = ["formula", "calculator", "expression", "evaluator", "parser"]
categories = ["parser-implementations", "mathematics", "science"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
regex = "1.10"
thiserror = "1.0"
chrono = "0.4"
rayon = "1.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.3"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
